[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/Narrator.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Gridmaps/GridMap3.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/rooms/300/room50.gd" type="Script" id=3]
[ext_resource path="res://scenes/objects/doors/PipeClosed.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/objects/Lantern.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/objects/Floors Walls Etc/WallObj3.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/objects/Sensor.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/WorldEnvironment3.tres" type="Environment" id=9]
[ext_resource path="res://scenes/enemies/LightHandler.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enemies/LightEnemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/theme/MinimalUI/digital-7.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scenes/objects/SavePentagram.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/objects/GameConsole.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/objects/doors/Pipe.tscn" type="PackedScene" id=15]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 2.5, 1.5, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.25, 0.75, 1 )

[sub_resource type="DynamicFont" id=4]
size = 150
font_data = ExtResource( 12 )

[node name="world" type="Spatial"]
pause_mode = 1
script = ExtResource( 3 )
EnvironmentUsed = ExtResource( 9 )

[node name="RoomItems" type="Spatial" parent="."]

[node name="Player" parent="RoomItems" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -14, 0.9, 18.1 )

[node name="PipeClosed" parent="RoomItems" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -6.28631e-06, 0, 1, 0, 6.28631e-06, 0, -1, -14, 0.5, 20.2 )

[node name="Lantern" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 19 )

[node name="Lantern2" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.7, 0, 13 )
Shrinks = false

[node name="Lantern3" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.7, 0, 4 )

[node name="Lantern4" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.6, 0, -0.7 )
Shrinks = false

[node name="Lantern5" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.4, 0, -7.7 )
Shrinks = false

[node name="Lantern6" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.4, 0, -7.7 )
Shrinks = false

[node name="Lantern7" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.4, 0, 6.3 )
Shrinks = false

[node name="Lantern8" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.4, 0, 6.3 )
Shrinks = false

[node name="Lantern9" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.4, 0, 7 )
Shrinks = false

[node name="Lantern10" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37.4, 0, -8 )
Shrinks = false

[node name="Lantern11" parent="RoomItems" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.6, 0, 0 )
Shrinks = false

[node name="StaticBody" type="StaticBody" parent="RoomItems"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 1.5, 12 )

[node name="MeshInstance" type="MeshInstance" parent="RoomItems/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.4 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="RoomItems/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.9 )
shape = SubResource( 3 )

[node name="TimeLeft" type="Label3D" parent="RoomItems/StaticBody"]
transform = Transform( -1, 0, -6.28631e-06, 0, 1, 0, 6.28631e-06, 0, -1, 0, 0.25, -0.102 )
double_sided = false
modulate = Color( 1, 0, 0, 1 )
outline_modulate = Color( 1, 1, 1, 1 )
text = "0:30"
font = SubResource( 4 )
uppercase = true

[node name="SecondTimer" type="Timer" parent="RoomItems/StaticBody"]
one_shot = true

[node name="SavePentagram" parent="RoomItems" instance=ExtResource( 13 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 30.7, 0.01, -10 )
CurrentPos = Vector3( 30.7, 1, -10.3 )

[node name="GameConsole" parent="RoomItems" instance=ExtResource( 14 )]
transform = Transform( -0.4, 0, -2.51452e-06, 0, 0.4, 0, 2.51452e-06, 0, -0.4, 43.5, 0.85, -3.8 )

[node name="Pipe" parent="RoomItems" instance=ExtResource( 15 )]
transform = Transform( -3.14315e-06, 0, -1, 0, 1, 0, 1, 0, -3.14315e-06, 50.2, 0.5, 0 )

[node name="Narrator" parent="." instance=ExtResource( 1 )]

[node name="GridMap3" parent="." instance=ExtResource( 2 )]
data = {
"cells": PoolIntArray( 25, 0, 0, 65527, 0, 0, 65561, 0, 0, 131063, 0, 0, 131072, 0, 1, 131073, 0, 1, 131074, 0, 1, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 131086, 0, 1, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 1, 131091, 0, 1, 131092, 0, 1, 131093, 0, 1, 131094, 0, 1, 131095, 0, 1, 131096, 0, 1, 196600, 0, 1, 196601, 0, 1, 196602, 0, 1, 196603, 0, 1, 196604, 0, 1, 196605, 0, 1, 196606, 0, 1, 196607, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 1, -65520, 0, 1, -65519, 0, 1, -65518, 0, 1, -65517, 0, 1, -65516, 0, 1, -65515, 0, 1, -65514, 0, 1, -65513, 0, 1, -65512, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, 0, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 65527, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 65536, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 131063, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 131073, 1, 1, 131074, 1, 1, 131075, 1, 1, 131076, 1, 1, 131077, 1, 1, 131078, 1, 1, 131079, 1, 1, 131080, 1, 1, 131081, 1, 1, 131082, 1, 1, 131083, 1, 1, 131084, 1, 1, 131085, 1, 1, 131086, 1, 1, 131087, 1, 1, 131088, 1, 1, 131089, 1, 1, 131090, 1, 1, 131091, 1, 1, 131092, 1, 1, 131093, 1, 1, 196600, 1, 1, 196601, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -65531, 1, 1, -65530, 1, 1, -65529, 1, 1, -65528, 1, 1, -65527, 1, 1, -65526, 1, 1, -65525, 1, 1, -65524, 1, 1, -65523, 1, 1, -65522, 1, 1, -65521, 1, 1, -65520, 1, 1, -65519, 1, 1, -65518, 1, 1, -65517, 1, 1, -65516, 1, 1, -65515, 1, 1, -8, 1, 1, -7, 1, 1, 0, 2, 0, 22, 2, 0, 65527, 2, 0, 65530, 2, 0, 65536, 2, 0, 65558, 2, 0, 131063, 2, 0, 131066, 2, 0, 131073, 2, 1, 131074, 2, 1, 131075, 2, 1, 131076, 2, 1, 131077, 2, 1, 131078, 2, 1, 131079, 2, 1, 131080, 2, 1, 131081, 2, 1, 131082, 2, 1, 131083, 2, 1, 131084, 2, 1, 131085, 2, 1, 131086, 2, 1, 131087, 2, 1, 131088, 2, 1, 131089, 2, 1, 131090, 2, 1, 131091, 2, 1, 131092, 2, 1, 131093, 2, 1, 196600, 2, 1, 196601, 2, 1, -65535, 2, 1, -65534, 2, 1, -65533, 2, 1, -65532, 2, 1, -65531, 2, 1, -65530, 2, 1, -65529, 2, 1, -65528, 2, 1, -65527, 2, 1, -65526, 2, 1, -65525, 2, 1, -65524, 2, 1, -65523, 2, 1, -65522, 2, 1, -65521, 2, 1, -65520, 2, 1, -65519, 2, 1, -65518, 2, 1, -65517, 2, 1, -65516, 2, 1, -65515, 2, 1, -8, 2, 1, -7, 2, 1, 0, 3, 0, 22, 3, 0, 65527, 3, 0, 65530, 3, 0, 65536, 3, 0, 65558, 3, 0, 131063, 3, 0, 131066, 3, 0, 131073, 3, 1, 131074, 3, 1, 131075, 3, 1, 131076, 3, 1, 131077, 3, 1, 131078, 3, 1, 131079, 3, 1, 131080, 3, 1, 131081, 3, 1, 131082, 3, 1, 131083, 3, 1, 131084, 3, 1, 131085, 3, 1, 131086, 3, 1, 131087, 3, 1, 131088, 3, 1, 131089, 3, 1, 131090, 3, 1, 131091, 3, 1, 131092, 3, 1, 131093, 3, 1, 196600, 3, 1, 196601, 3, 1, -65535, 3, 1, -65534, 3, 1, -65533, 3, 1, -65532, 3, 1, -65531, 3, 1, -65530, 3, 1, -65529, 3, 1, -65528, 3, 1, -65527, 3, 1, -65526, 3, 1, -65525, 3, 1, -65524, 3, 1, -65523, 3, 1, -65522, 3, 1, -65521, 3, 1, -65520, 3, 1, -65519, 3, 1, -65518, 3, 1, -65517, 3, 1, -65516, 3, 1, -65515, 3, 1, -8, 3, 1, -7, 3, 1, 0, 4, 0, 22, 4, 0, 65527, 4, 0, 65530, 4, 0, 65536, 4, 0, 65558, 4, 0, 131063, 4, 0, 131066, 4, 0, 131073, 4, 1, 131074, 4, 1, 131075, 4, 1, 131076, 4, 1, 131077, 4, 1, 131078, 4, 1, 131079, 4, 1, 131080, 4, 1, 131081, 4, 1, 131082, 4, 1, 131083, 4, 1, 131084, 4, 1, 131085, 4, 1, 131086, 4, 1, 131087, 4, 1, 131088, 4, 1, 131089, 4, 1, 131090, 4, 1, 131091, 4, 1, 131092, 4, 1, 131093, 4, 1, 196600, 4, 1, 196601, 4, 1, -65535, 4, 1, -65534, 4, 1, -65533, 4, 1, -65532, 4, 1, -65531, 4, 1, -65530, 4, 1, -65529, 4, 1, -65528, 4, 1, -65527, 4, 1, -65526, 4, 1, -65525, 4, 1, -65524, 4, 1, -65523, 4, 1, -65522, 4, 1, -65521, 4, 1, -65520, 4, 1, -65519, 4, 1, -65518, 4, 1, -65517, 4, 1, -65516, 4, 1, -65515, 4, 1, -8, 4, 1, -7, 4, 1, 0, 5, 0, 22, 5, 0, 65527, 5, 0, 65530, 5, 0, 65536, 5, 0, 65558, 5, 0, 131063, 5, 0, 131066, 5, 0, 131073, 5, 1, 131074, 5, 1, 131075, 5, 1, 131076, 5, 1, 131077, 5, 1, 131078, 5, 1, 131079, 5, 1, 131080, 5, 1, 131081, 5, 1, 131082, 5, 1, 131083, 5, 1, 131084, 5, 1, 131085, 5, 1, 131086, 5, 1, 131087, 5, 1, 131088, 5, 1, 131089, 5, 1, 131090, 5, 1, 131091, 5, 1, 131092, 5, 1, 131093, 5, 1, 196600, 5, 1, 196601, 5, 1, -65535, 5, 1, -65534, 5, 1, -65533, 5, 1, -65532, 5, 1, -65531, 5, 1, -65530, 5, 1, -65529, 5, 1, -65528, 5, 1, -65527, 5, 1, -65526, 5, 1, -65525, 5, 1, -65524, 5, 1, -65523, 5, 1, -65522, 5, 1, -65521, 5, 1, -65520, 5, 1, -65519, 5, 1, -65518, 5, 1, -65517, 5, 1, -65516, 5, 1, -65515, 5, 1, -8, 5, 1, -7, 5, 1, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 19, 6, 0, 20, 6, 0, 21, 6, 0, 65527, 6, 0, 65530, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 6, 0, 65553, 6, 0, 65554, 6, 0, 65555, 6, 0, 65556, 6, 0, 65557, 6, 0, 131063, 6, 0, 131066, 6, 0, 196600, 6, 1, 196601, 6, 1, -8, 6, 1, -7, 6, 1, 65527, 7, 0, 65530, 7, 0, 131063, 7, 0, 131066, 7, 0, 196600, 7, 1, 196601, 7, 1, -8, 7, 1, -7, 7, 1, 65527, 8, 0, 65530, 8, 0, 131063, 8, 0, 131066, 8, 0, 196600, 8, 1, 196601, 8, 1, -8, 8, 1, -7, 8, 1, 65527, 9, 0, 65530, 9, 0, 131063, 9, 0, 131066, 9, 0, 196600, 9, 1, 196601, 9, 1, -8, 9, 1, -7, 9, 1, 65528, 10, 0, 65529, 10, 0, 131064, 10, 0, 131065, 10, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 7, 65529, 0, 8, 65529, 0, 9, 65529, 0, 10, 65529, 0, 11, 65529, 0, 12, 65529, 0, 13, 65529, 0, 14, 65529, 0, 15, 65529, 0, 16, 65529, 0, 17, 65529, 0, 18, 65529, 0, 19, 65529, 0, 20, 65529, 0, 21, 65529, 0, 65537, 65529, 0, 65538, 65529, 0, 65539, 65529, 0, 65540, 65529, 0, 65541, 65529, 0, 65542, 65529, 0, 65543, 65529, 0, 65544, 65529, 0, 65545, 65529, 0, 65546, 65529, 0, 65547, 65529, 0, 65548, 65529, 0, 65549, 65529, 0, 65550, 65529, 0, 65551, 65529, 0, 65552, 65529, 0, 65553, 65529, 0, 65554, 65529, 0, 65555, 65529, 0, 65556, 65529, 0, 65557, 65529, 0, 0, 65530, 0, 22, 65530, 0, 65536, 65530, 0, 65558, 65530, 0, 131073, 65530, 1, 131074, 65530, 1, 131075, 65530, 1, 131076, 65530, 1, 131077, 65530, 1, 131078, 65530, 1, 131079, 65530, 1, 131080, 65530, 1, 131081, 65530, 1, 131082, 65530, 1, 131083, 65530, 1, 131084, 65530, 1, 131085, 65530, 1, 131086, 65530, 1, 131087, 65530, 1, 131088, 65530, 1, 131089, 65530, 1, 131090, 65530, 1, 131091, 65530, 1, 131092, 65530, 1, 131093, 65530, 1, -65535, 65530, 1, -65534, 65530, 1, -65533, 65530, 1, -65532, 65530, 1, -65531, 65530, 1, -65530, 65530, 1, -65529, 65530, 1, -65528, 65530, 1, -65527, 65530, 1, -65526, 65530, 1, -65525, 65530, 1, -65524, 65530, 1, -65523, 65530, 1, -65522, 65530, 1, -65521, 65530, 1, -65520, 65530, 1, -65519, 65530, 1, -65518, 65530, 1, -65517, 65530, 1, -65516, 65530, 1, -65515, 65530, 1, 0, 65531, 0, 22, 65531, 0, 65536, 65531, 0, 65558, 65531, 0, 131073, 65531, 1, 131074, 65531, 1, 131075, 65531, 1, 131076, 65531, 1, 131077, 65531, 1, 131078, 65531, 1, 131079, 65531, 1, 131080, 65531, 1, 131081, 65531, 1, 131082, 65531, 1, 131083, 65531, 1, 131084, 65531, 1, 131085, 65531, 1, 131086, 65531, 1, 131087, 65531, 1, 131088, 65531, 1, 131089, 65531, 1, 131090, 65531, 1, 131091, 65531, 1, 131092, 65531, 1, 131093, 65531, 1, -65535, 65531, 1, -65534, 65531, 1, -65533, 65531, 1, -65532, 65531, 1, -65531, 65531, 1, -65530, 65531, 1, -65529, 65531, 1, -65528, 65531, 1, -65527, 65531, 1, -65526, 65531, 1, -65525, 65531, 1, -65524, 65531, 1, -65523, 65531, 1, -65522, 65531, 1, -65521, 65531, 1, -65520, 65531, 1, -65519, 65531, 1, -65518, 65531, 1, -65517, 65531, 1, -65516, 65531, 1, -65515, 65531, 1, 0, 65532, 0, 22, 65532, 0, 65536, 65532, 0, 65558, 65532, 0, 131073, 65532, 1, 131074, 65532, 1, 131075, 65532, 1, 131076, 65532, 1, 131077, 65532, 1, 131078, 65532, 1, 131079, 65532, 1, 131080, 65532, 1, 131081, 65532, 1, 131082, 65532, 1, 131083, 65532, 1, 131084, 65532, 1, 131085, 65532, 1, 131086, 65532, 1, 131087, 65532, 1, 131088, 65532, 1, 131089, 65532, 1, 131090, 65532, 1, 131091, 65532, 1, 131092, 65532, 1, 131093, 65532, 1, -65535, 65532, 1, -65534, 65532, 1, -65533, 65532, 1, -65532, 65532, 1, -65531, 65532, 1, -65530, 65532, 1, -65529, 65532, 1, -65528, 65532, 1, -65527, 65532, 1, -65526, 65532, 1, -65525, 65532, 1, -65524, 65532, 1, -65523, 65532, 1, -65522, 65532, 1, -65521, 65532, 1, -65520, 65532, 1, -65519, 65532, 1, -65518, 65532, 1, -65517, 65532, 1, -65516, 65532, 1, -65515, 65532, 1, 0, 65533, 0, 22, 65533, 0, 65536, 65533, 0, 65558, 65533, 0, 131073, 65533, 1, 131074, 65533, 1, 131075, 65533, 1, 131076, 65533, 1, 131077, 65533, 1, 131078, 65533, 1, 131079, 65533, 1, 131080, 65533, 1, 131081, 65533, 1, 131082, 65533, 1, 131083, 65533, 1, 131084, 65533, 1, 131085, 65533, 1, 131086, 65533, 1, 131087, 65533, 1, 131088, 65533, 1, 131089, 65533, 1, 131090, 65533, 1, 131091, 65533, 1, 131092, 65533, 1, 131093, 65533, 1, -65535, 65533, 1, -65534, 65533, 1, -65533, 65533, 1, -65532, 65533, 1, -65531, 65533, 1, -65530, 65533, 1, -65529, 65533, 1, -65528, 65533, 1, -65527, 65533, 1, -65526, 65533, 1, -65525, 65533, 1, -65524, 65533, 1, -65523, 65533, 1, -65522, 65533, 1, -65521, 65533, 1, -65520, 65533, 1, -65519, 65533, 1, -65518, 65533, 1, -65517, 65533, 1, -65516, 65533, 1, -65515, 65533, 1, 0, 65534, 0, 22, 65534, 0, 23, 65534, 0, 24, 65534, 0, 65528, 65534, 0, 65529, 65534, 0, 65530, 65534, 0, 65531, 65534, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 65536, 65534, 0, 65558, 65534, 0, 65559, 65534, 0, 65560, 65534, 0, 131064, 65534, 0, 131065, 65534, 0, 131066, 65534, 0, 131067, 65534, 0, 131068, 65534, 0, 131069, 65534, 0, 131070, 65534, 0, 131071, 65534, 0, 131073, 65534, 1, 131074, 65534, 1, 131075, 65534, 1, 131076, 65534, 1, 131077, 65534, 1, 131078, 65534, 1, 131079, 65534, 1, 131080, 65534, 1, 131081, 65534, 1, 131082, 65534, 1, 131083, 65534, 1, 131084, 65534, 1, 131085, 65534, 1, 131086, 65534, 1, 131087, 65534, 1, 131088, 65534, 1, 131089, 65534, 1, 131090, 65534, 1, 131091, 65534, 1, 131092, 65534, 1, 131093, 65534, 1, -65535, 65534, 1, -65534, 65534, 1, -65533, 65534, 1, -65532, 65534, 1, -65531, 65534, 1, -65530, 65534, 1, -65529, 65534, 1, -65528, 65534, 1, -65527, 65534, 1, -65526, 65534, 1, -65525, 65534, 1, -65524, 65534, 1, -65523, 65534, 1, -65522, 65534, 1, -65521, 65534, 1, -65520, 65534, 1, -65519, 65534, 1, -65518, 65534, 1, -65517, 65534, 1, -65516, 65534, 1, -65515, 65534, 1, 25, 65535, 0, 65527, 65535, 0, 65561, 65535, 0, 131063, 65535, 0, 131072, 65535, 1, 131073, 65535, 1, 131074, 65535, 1, 131075, 65535, 1, 131076, 65535, 1, 131077, 65535, 1, 131078, 65535, 1, 131079, 65535, 1, 131080, 65535, 1, 131081, 65535, 1, 131082, 65535, 1, 131083, 65535, 1, 131084, 65535, 1, 131085, 65535, 1, 131086, 65535, 1, 131087, 65535, 1, 131088, 65535, 1, 131089, 65535, 1, 131090, 65535, 1, 131091, 65535, 1, 131092, 65535, 1, 131093, 65535, 1, 131094, 65535, 1, 131095, 65535, 1, 131096, 65535, 1, 196600, 65535, 1, 196601, 65535, 1, 196602, 65535, 1, 196603, 65535, 1, 196604, 65535, 1, 196605, 65535, 1, 196606, 65535, 1, 196607, 65535, 1, -65536, 65535, 1, -65535, 65535, 1, -65534, 65535, 1, -65533, 65535, 1, -65532, 65535, 1, -65531, 65535, 1, -65530, 65535, 1, -65529, 65535, 1, -65528, 65535, 1, -65527, 65535, 1, -65526, 65535, 1, -65525, 65535, 1, -65524, 65535, 1, -65523, 65535, 1, -65522, 65535, 1, -65521, 65535, 1, -65520, 65535, 1, -65519, 65535, 1, -65518, 65535, 1, -65517, 65535, 1, -65516, 65535, 1, -65515, 65535, 1, -65514, 65535, 1, -65513, 65535, 1, -65512, 65535, 1, -8, 65535, 1, -7, 65535, 1, -6, 65535, 1, -5, 65535, 1, -4, 65535, 1, -3, 65535, 1, -2, 65535, 1, -1, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 2, 0 )
}

[node name="walls" type="Spatial" parent="GridMap3"]

[node name="wall" parent="GridMap3/walls" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1 )

[node name="wall2" parent="GridMap3/walls" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1 )

[node name="wall3" parent="GridMap3/walls" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, 1 )

[node name="wall4" parent="GridMap3/walls" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, -1 )

[node name="walls2" type="Spatial" parent="GridMap3"]

[node name="wall" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, 11 )

[node name="wall2" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, 9 )

[node name="wall3" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, 11 )

[node name="wall4" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, 9 )

[node name="wall5" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, 7 )

[node name="wall6" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, 5 )

[node name="wall7" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, 7 )

[node name="wall8" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, 5 )

[node name="wall9" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, 3 )

[node name="wall10" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, 1 )

[node name="wall11" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, 3 )

[node name="wall12" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, 1 )

[node name="wall13" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, -1 )

[node name="wall14" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, -3 )

[node name="wall15" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, -1 )

[node name="wall16" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, -3 )

[node name="wall17" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, -5 )

[node name="wall18" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, -7 )

[node name="wall19" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, -5 )

[node name="wall20" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, -7 )

[node name="wall21" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, -9 )

[node name="wall22" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 1, -11 )

[node name="wall23" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, -9 )

[node name="wall24" parent="GridMap3/walls2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 3, -11 )

[node name="Sensor" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4.3, 3, 1, 0 )

[node name="CountDown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="LightHandler" parent="." instance=ExtResource( 10 )]
Amount = 10

[node name="Light" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.5, 1.4, 11.9 )

[node name="Light2" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.4, 0.2, 11.9 )

[node name="Light3" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.4, -7.45058e-08, 3.4 )

[node name="Light4" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.8, 0.0999999, 3.8 )

[node name="Light5" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25.9, 0.0999999, -1.8 )

[node name="Light6" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25.9, 1.4, -7.5 )

[node name="Light7" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.7, 3.9, -6.4 )

[node name="Light8" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.2, 3.9, -3.4 )

[node name="Light9" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 2, -3.4 )

[node name="Light10" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4, 1.1, -12 )

[node name="Light11" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4, 2.2, -12 )

[node name="Light12" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.4, 0.0999997, -4.3 )

[node name="Light13" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0.0999997, 0.4 )

[node name="Light14" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 3.8, 5.4 )

[node name="Light15" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25.9, 1.8, 7.1 )

[node name="Light16" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 3.5, 5.9 )

[node name="Light17" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7, 2.6, 11.9 )

[node name="Light18" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.0999995, -9.1 )

[node name="Light19" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.2, 0.0999995, -9.1 )

[node name="Light20" parent="LightHandler" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0.0999995, -5.3 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 2, 4 )
intensity = 0.75
extents = Vector3( 36, 5, 19 )
box_projection = true
enable_shadows = true
interior_enable = true

[connection signal="timeout" from="RoomItems/StaticBody/SecondTimer" to="." method="_on_SecondTimer_timeout"]
[connection signal="PlayerDetected" from="Sensor" to="." method="_on_Sensor_PlayerDetected"]
[connection signal="timeout" from="CountDown" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
